2006-10-03  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/{remoteconf.h|sainfo.h}: Added remoteid/ph1id values.
	* src/racoon/{handler.c|isakmp_quick.c|pfkey.c|sainfo.c}: Uses
	  remoteid/ph1id values.
	* src/racoon/{cfparse.y|cftoken.l}: Parses remoteid/ph1id values.
	* src/racoon/racoon.conf.5: Added remoteid/ph1id syntax.

2006-10-02  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/socketmisc.c: don't use NULL pointer (Coverity)
	* src/racoon/racoonctl.c: don't use NULL pointer (Coverity)
	* src/racoon/proposal.c: don't use NULL pointer (Coverity)
	* src/racoon/pfkey.c: don't use NULL pointer (Coverity)
	* src/racoon/ipsec_doi.c: don't use NULL pointer (Coverity)
	* src/racoon/isakmp.c: don't use NULL pointer (Coverity)
	* src/racoon/oakley.c: don't use NULL pointer (Coverity)
	* src/racoon/admin.c: avoid reusing free'd pointer (Coverity)
	* src/racoon/{admin.c|sockmisc.c}: Fix memory leak (Coverity), refactor
	  the code to use port get/set function
	* src/racoon/admin.c: fix memory leak (Coverity)
	* src/racoon/algorithm.c: fix array overrun (Coverity)
	* src/racoon/isakmp_ident.c: Remove dead code (Coverity)
	* src/racoon/isakmp_inf.c: Check for NULL pointer (Coverity)
	* src/racoon/isakmp_base.c:  avoid reusing free'd pointer (Coverity)
	
2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
	* src/racoon/ipsec_doi.c: FIx memory leak (Coverity)

2006-09-30  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_agg.c: Remove dead code (Coverity)
	* src/racoon/isakmp_cfg.c: Fix memory leak (Coverity)
	* src/racoon/samples/roadwarrior/client/{phase1-up.sh|phase1-down.sh}:
	  update the scripts for wrorking around routing problems on NetBSD
	* src/racoon/admin.c: Do not free id and key, as they are used later
	* src/racoon/session.c: Reuse existing code for closing IKE sockets,
	  and avoid screwing things by setting p->sock = -1, which is not
	  expected (Coverity).
